<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="7dp"
        android:paddingTop="7dp" >

        <Switch
            android:id="@+id/switchType"
            android:layout_width="200dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="0"
            android:text="@string/type_string"
            android:textOn="@string/in_string"
            android:textOff="@string/out_string" />

    </TableRow>

    <TableRow
        android:id="@+id/trManual3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="7dp"
        android:paddingTop="7dp" >

        <DatePicker
            android:id="@+id/datePickerSelection"
            android:calendarViewShown="false"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_column="1"
            android:layout_weight="1"
             />

    </TableRow>

    <TableRow
        android:id="@+id/trManual2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:paddingBottom="7dp"
        android:paddingTop="7dp" >

        <TimePicker
            android:id="@+id/timePickerSelection"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_column="1"
            android:layout_weight="1"
            />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="7dp"
        android:paddingTop="7dp" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_column="1"
            android:layout_weight="1"
            android:background="@drawable/button_selector_background"
            android:textColor="@color/button_text_color"
            android:text="@string/cancel_string"
            android:onClick="cancelClick" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_selector_background"
            android:textColor="@color/button_text_color"
            android:text="@string/select_string"
            android:onClick="selectClick" />

    </TableRow>

</TableLayout>
