<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="7dp"
        android:paddingTop="7dp" >

        <TextView
            android:id="@+id/textViewFrom"
			android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/please_select_date_string" />

    </TableRow>

    <TableRow
        android:id="@+id/trManual3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="7dp"
        android:paddingTop="7dp" >

        <DatePicker
            android:id="@+id/datePickerSelection"
            android:calendarViewShown="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
             />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="7dp"
        android:paddingTop="7dp" >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel_string"
            android:background="@drawable/button_selector_background"
            android:textColor="@color/button_text_color"
            android:onClick="cancelClick" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/clear_string"
            android:background="@drawable/button_selector_background"
            android:textColor="@color/button_text_color"
            android:onClick="clearClick" />

        <Button
            android:id="@+id/buttonSelect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/select_string"
            android:background="@drawable/button_selector_background"
            android:textColor="@color/button_text_color"
            android:onClick="selectClick" />

    </TableRow>

</TableLayout>
